@@ -40,6 +40,10 @@ zync
 		}
 		
 		
+		logs_dir : /storage/backup/logs
+		
+		num_concurrent : 10
+		
 	}
 	
 	
